# app_outage_plugin

./: Dockerfile  README.md  docker-compose.yaml  example.yaml  pyproject.toml
app_outage_plugin/: app_outage_plugin.py  kubernetes_functions.py
tests/: test_app_outage_plugin.py  test_kubeconfig.yaml
