[tool.poetry]
name = "app-outage-plugin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app_outage_plugin"}]

[tool.poetry.dependencies]
python = "^3.10"
arcaflow-lib-kubernetes = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
